# tp-highload

./: .config  .gitignore  CMakeLists.txt  Dockerfile  README.md  httpd.conf  main.cpp
highload/: CMakeLists.txt  README.md
highload/headers/: Request.h
highload/nginx/: nginx.conf
highload/src/: Connection.cpp  Request.cpp  Response.cpp  Server.cpp  main.cpp
nginx/: nginx.conf
scr/: Connection.cpp  Connection.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h  main.cpp
src/: Connection.cpp  Server.cpp
